linkedin pic not showing up - hopefully fixed

--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+h1 {
+    font-size: larger;
+}
 h1, h3 {
     color: white;
     text-align: center;
